--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -395,6 +395,7 @@ h1, h2, h3, h4, h5, h6 {
   height: 100vh;
   background: url("../img/Remplazo.jpg") top center;
   background-size: cover;
+  z-index: -1;
   position: relative;
 }
 
